<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="50dp"
    tools:context=".activity.ChangePwdActivity">

    <TextView
        android:id="@+id/tv_previous_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/previous_pwd_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/et_previous_pwd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/previous_pwd_hint"
        app:layout_constraintTop_toBottomOf="@+id/tv_previous_pwd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_new_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/new_pwd_text"
        app:layout_constraintTop_toBottomOf="@+id/et_previous_pwd"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/et_new_pwd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/previous_new_hint"
        app:layout_constraintTop_toBottomOf="@+id/tv_new_pwd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_check_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/new_check_text"
        app:layout_constraintTop_toBottomOf="@+id/et_new_pwd"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/et_check_pwd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/previous_new_hint"
        app:layout_constraintTop_toBottomOf="@+id/tv_check_pwd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_change_pwd"
        android:text="@string/change_pwd_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>